--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,22 @@ buildNumber.properties
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
+
+language: java
+sudo: false
+jobs:
+ include:
+  - stage:Tests
+    script: echo "`date` Unit Tests1" && sleepl
+    name: "Integration Tests"
+  - stage: build
+    name: "Mvn build"
+    script: mvn package
+deploy:
+ provider:release
+ api_key: "$API_KEY"
+ file: "target/my-app-1.0-SMAPSNOT.jar"
+ skip_cleanup: true
+ on:
+  tag:true
+
