--- a/.gitignore
+++ b/.gitignore
@@ -17,13 +17,13 @@ sudo: false
 jobs:
  include:
   - stage:Tests
-    script: echo "`date` Unit Tests1" && sleepl
+    script: echo "`date` Unit Tests1" && sleep 1
     name: "Integration Tests"
   - stage: build
     name: "Mvn build"
     script: mvn package
 deploy:
- provider:release
+ provider:releases
  api_key: "$API_KEY"
  file: "target/my-app-1.0-SMAPSNOT.jar"
  skip_cleanup: true
